<resources>
    <string name="app_name">ИС Автозаправочные станции</string>
    <string name="title_home">Главная</string>
    <string name="map">Карта</string>
    <string name="account">Аккаунт</string>
    <string name="account_label">Аккаунт</string>
    <string name="news_label">Новости</string>
    <string name="back">Назад</string>
    <string name="suppliers_label">Поставщики:</string>
    <string name="station_address">station_address</string>
    <string name="station_name">station_name</string>
    <string name="supplier_name">supplier_name</string>
    <string name="account_name">account_name</string>
    <string name="login_button">Вход</string>
    <string name="login_box">Логин</string>
    <string name="password_box">Пароль</string>
    <string name="exit_button">Выход</string>
    <string name="station_enabled_text">online</string>
</resources>